--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -9,7 +9,8 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- Capomulin and Ramicane are the best for decreasing tumors.\n",
+    "- When mouse weight increases tumor weight will also increase due to the correlation.\n",
     " "
    ]
   },
